--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,6 @@
-h1= title
-p Welcome to #{title}
+#container.container-fluid
+  #nav.col-md-2
+    h1 Ubicación de Vehiculos
+    .data
+  #map-canvas.col-md-10
+    span#waiting Esperando conexión de dispositivos...
